--- a/app/views/marketing/about.scala.html
+++ b/app/views/marketing/about.scala.html
@@ -16,5 +16,17 @@
                 <input type="submit"/>
             </form>
         </div>
+        <fieldset>
+            <form>
+                <label for="personName">Name:</label>
+                <input type="text" name="id" id="personId"/>
+                <input type="text" name="name" id="personName"/>
+                <input type="button" value="Create" id="createPerson"/>
+            </form>
+        </fieldset>
+        <ul id="peopleList"></ul>
+
+        <script type="text/javascript" src="@routes.Person.javascriptRoutes"></script>
+        <script src="@routes.Assets.at("javascripts/person.js")"></script>
     </div>
 }
